discussion/kv_engine/173486/173486_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Add tests for MemOverhead{,Queue,Index}

Expand on testCheckpointManagerMemUsage to test the
base case of a single checkpoint's memory
calculations.

Add a test to validate that the CheckpointManager's
getMemOverhead(), getMemOverheadIndex(), and
getMemOverheadQueue() are calculated correctly as
the sum of all Checkpoints managed by the CM.

Change-Id: I76c920a2dbc99fea1fbe6917dde8450f06f6a62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-20 09:13:02.000000000
Message: 
Patch Set 6: Patch Set 5 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 10:36:47.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45399/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(3372): error C2039: "getCheckpointMaxSize": is not a member of "VBucket" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45399/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16783/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33: error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
    const std::string value(vb->getCheckpointMaxSize(), "!");
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16783/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17661/ : FAILURE

Compile error at [2022-04-20T09:26:21.154Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17661/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26970/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6439/ : FAILURE

Compile error at [2022-04-20T10:31:32.099Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18564/ : FAILURE

Compile error at [2022-04-20T10:34:17.302Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18564/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18901/ : FAILURE

Compile error at [2022-04-20T10:33:36.635Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18901/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6510/ : FAILURE

Compile error at [2022-04-20T10:19:48.369Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6510/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19603/ : FAILURE

Compile error at [2022-04-20T10:31:20.846Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19603/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38139/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15717/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 12:47:29.000000000
Message: 
Patch Set 6: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26966/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26966/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6437/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6437/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19600/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19600/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18563/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18563/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18899/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18899/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17657/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17657/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6499/ : FAILURE

Compile error at [2022-04-20T09:47:33.084Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6499/ )
----------------------------------------------------------------------------------------------------------------------
